--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -9,10 +9,11 @@
     }
   },
   "profiles": {
-    "https": {
+    "api": {
+      "hotReloadEnabled": false,
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
